Added Instant Respawn, Earlier Version Support